# cpp-autoargs

./: .travis.yml  .travis.yml~  CMakeLists.txt  LICENSE  README.md  autoargs.hpp  main_test.cpp
examples/: hello1.cpp  hello2.cpp  hello3.cpp
inc/: AbsArgument.hpp  ArgumentManager.hpp  AutoArgsException.hpp  BooleanArgument.hpp  DefaultHelpMessageCreator.hpp  DefaultInputFileReader.hpp  DriverData.hpp  Exception.hpp  GenericArgumentParser.hpp  GenericArgumentParser_impl.hpp  GenericNumericArgument.hpp  GenericNumericArgument_impl.hpp  StringArgument.hpp  autoargs.hpp
source/: autoargs.cpp
src/: AbsArgument.cpp  ArgumentManager.cpp  AutoArgsException.cpp  BooleanArgument.cpp  DefaultHelpMessageCreator.cpp  DefaultInputFileReader.cpp  Exception.cpp  StringArgument.cpp
test/: ArgumentManager_test.cpp  AutoArgsException_test.cpp  BooleanArgument_test.cpp  DefaultHelpMessageCreator_test.cpp  DefaultInputFileReader_test.cpp  Exception_test.cpp  GenericArgumentParser_test.cpp  GenericArgument_test.cpp  GenericNumericArgument_test.cpp  StringArgument_test.cpp  defaultInputFileReaderData.in  main_test.cpp
test/input/: defaultInputFileReaderData.in
